# Minesweeper

./: CMakeLists.txt  CMakePresets.json  README.md
lib/: core.h  game.h  render.h  timer.h
lib/core/: core.h  enums.h  game.h  texture_list.h  texturemap.h  timer.h  utils.h
lib/gui/: game_scene.h  render.h  scene.h  ui_element.h  ui_states.h
src/: game.c  main.c  main_menu.c  render.c  timer.h
src/core/: core.c  game.c  texture_list.c  texturemap.c  timer.c  utils.c
src/gui/: game_scene.c  main_menu.c  main_menu_scene.c  render.c  scene.c  ui_element.c
toolchains/: toolchain-windows-x86_64.cmake
